force-app/main/default/objects/Activity_log__c/Activity_log__c.object-meta.xml
<CustomObject>
    <label>Activity log</label>
    <nameField>
        <label>Activity log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>