force-app/main/default/objects/Activity_log__c/fields/Action_Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Action_Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activity_logs</relationshipName>
    <type>Lookup</type>
</CustomField>