force-app/main/default/objects/Activity_log__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Level Change</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Enrolment Form</fullName>
            </value>
            <value>
                <fullName>LMS</fullName>
            </value>
            <value>
                <fullName>Lead Merge</fullName>
            </value>
            <value>
                <fullName>View Phone Number</fullName>
            </value>
            <value>
                <fullName>Lead Downgraded</fullName>
            </value>
            <value>
                <fullName>Owner Change</fullName>
            </value>
            <value>
                <fullName>Candidate Lost To Queue</fullName>
            </value>
            <value>
                <fullName>Candidate Assigned From Queue</fullName>
            </value>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Gmeet</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>