force-app/main/default/objects/Activity_log__c/fields/Available_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Available_Credit_Score__c</fullName>
    <label>Available Credit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>