force-app/main/default/objects/Activity_log__c/fields/Call_Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Seconds__c</fullName>
    <label>Call Duration Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>