force-app/main/default/objects/Activity_log__c/fields/Call_Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Log_Type__c</fullName>
    <label>Call Log Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>