force-app/main/default/objects/Activity_log__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Activity logs</relationshipLabel>
    <relationshipName>Activity_logs</relationshipName>
    <type>Lookup</type>
</CustomField>