force-app/main/default/objects/Activity_log__c/fields/Changed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Changed_Date_Time__c</fullName>
    <label>Changed Date/Time</label>
    <type>DateTime</type>
</CustomField>