force-app/main/default/objects/Activity_log__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <type>TextArea</type>
</CustomField>