force-app/main/default/objects/Activity_log__c/fields/Date_and_Time_of_call__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_of_call__c</fullName>
    <label>Date and Time of call</label>
    <type>DateTime</type>
</CustomField>