force-app/main/default/objects/Activity_log__c/fields/EF_Status__c.field-meta.xml
<CustomField>
    <fullName>EF_Status__c</fullName>
    <label>EF Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>