force-app/main/default/objects/Activity_log__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Activity logs</relationshipLabel>
    <relationshipName>Activity_logs</relationshipName>
    <type>Lookup</type>
</CustomField>