force-app/main/default/objects/Activity_log__c/fields/L1__c.field-meta.xml
<CustomField>
    <fullName>L1__c</fullName>
    <label>L1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L1</valueSetName>
    </valueSet>
</CustomField>