force-app/main/default/objects/Activity_log__c/fields/L2__c.field-meta.xml
<CustomField>
    <fullName>L2__c</fullName>
    <label>L2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L2</valueSetName>
    </valueSet>
</CustomField>