force-app/main/default/objects/Activity_log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Activity logs</relationshipLabel>
    <relationshipName>Activity_logs</relationshipName>
    <type>Lookup</type>
</CustomField>