force-app/main/default/objects/Activity_log__c/fields/Loan_status__c.field-meta.xml
<CustomField>
    <fullName>Loan_status__c</fullName>
    <label>Loan status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>