force-app/main/default/objects/Activity_log__c/fields/Logging_Id__c.field-meta.xml
<CustomField>
    <fullName>Logging_Id__c</fullName>
    <label>Logging Id</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>