force-app/main/default/objects/Activity_log__c/fields/New_Assinged_Weight__c.field-meta.xml
<CustomField>
    <fullName>New_Assinged_Weight__c</fullName>
    <label>New Assinged  Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>