force-app/main/default/objects/Activity_log__c/fields/New_Level__c.field-meta.xml
<CustomField>
    <fullName>New_Level__c</fullName>
    <label>New Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>