force-app/main/default/objects/Activity_log__c/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activity_logs2</relationshipName>
    <type>Lookup</type>
</CustomField>