force-app/main/default/objects/Activity_log__c/fields/Previous_Level__c.field-meta.xml
<CustomField>
    <fullName>Previous_Level__c</fullName>
    <label>Previous Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>