force-app/main/default/objects/Activity_log__c/fields/Previous_weight__c.field-meta.xml
<CustomField>
    <fullName>Previous_weight__c</fullName>
    <label>Previous weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>