force-app/main/default/objects/Activity_log__c/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>