force-app/main/default/objects/Activity_log__c/fields/Reason_For_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Change__c</fullName>
    <label>Reason For Change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>