force-app/main/default/objects/Activity_log__c/fields/Round_Robin_Pool__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Pool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Round Robin Pool</label>
    <referenceTo>Round_Robin_Pool__c</referenceTo>
    <relationshipLabel>Activity logs</relationshipLabel>
    <relationshipName>Activity_logs</relationshipName>
    <type>Lookup</type>
</CustomField>