force-app/main/default/objects/Activity_log__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activity logs</relationshipLabel>
    <relationshipName>Activity_logs</relationshipName>
    <type>Lookup</type>
</CustomField>