force-app/main/default/objects/Activity_log__c/fields/Transcation__c.field-meta.xml
<CustomField>
    <fullName>Transcation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transcation</label>
    <referenceTo>Transcation__c</referenceTo>
    <relationshipLabel>Activity logs</relationshipLabel>
    <relationshipName>Activity_logs</relationshipName>
    <type>Lookup</type>
</CustomField>