force-app/main/default/objects/Activity_log__c/fields/Transcation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transcation_Amount__c</fullName>
    <label>Transcation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>