force-app/main/default/objects/Activity_log__c/fields/Transcation_Status__c.field-meta.xml
<CustomField>
    <fullName>Transcation_Status__c</fullName>
    <label>Transcation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>