force-app/main/default/objects/Activity_log__c/recordTypes/Activity_Log.recordType-meta.xml
<RecordType>
    <fullName>Activity_Log</fullName>
    <active>true</active>
    <label>Activity Log</label>
</RecordType>