force-app/main/default/objects/Activity_log__c/recordTypes/Call.recordType-meta.xml
<RecordType>
    <fullName>Call</fullName>
    <active>true</active>
    <label>Call</label>
</RecordType>