force-app/main/default/objects/Activity_log__c/recordTypes/Candidate_Assigned_From_Queue.recordType-meta.xml
<RecordType>
    <fullName>Candidate_Assigned_From_Queue</fullName>
    <active>true</active>
    <label>Candidate Assigned From Queue</label>
</RecordType>