force-app/main/default/objects/Activity_log__c/recordTypes/Candidate_Lost_To_Queue.recordType-meta.xml
<RecordType>
    <fullName>Candidate_Lost_To_Queue</fullName>
    <active>true</active>
    <label>Candidate Lost To Queue</label>
</RecordType>