force-app/main/default/objects/Activity_log__c/recordTypes/Email.recordType-meta.xml
<RecordType>
    <fullName>Email</fullName>
    <active>true</active>
    <label>Email</label>
</RecordType>