force-app/main/default/objects/Activity_log__c/recordTypes/Enquiry.recordType-meta.xml
<RecordType>
    <fullName>Enquiry</fullName>
    <active>true</active>
    <label>Enquiry</label>
</RecordType>