force-app/main/default/objects/Activity_log__c/recordTypes/Enrolment_Form.recordType-meta.xml
<RecordType>
    <fullName>Enrolment_Form</fullName>
    <active>true</active>
    <label>Enrolment Form</label>
</RecordType>