force-app/main/default/objects/Activity_log__c/recordTypes/Gmeet.recordType-meta.xml
<RecordType>
    <fullName>Gmeet</fullName>
    <active>true</active>
    <label>Gmeet</label>
</RecordType>