force-app/main/default/objects/Activity_log__c/recordTypes/Lead_Conversion.recordType-meta.xml
<RecordType>
    <fullName>Lead_Conversion</fullName>
    <active>true</active>
    <label>Lead Conversion</label>
</RecordType>