force-app/main/default/objects/Activity_log__c/recordTypes/Lead_Downgraded.recordType-meta.xml
<RecordType>
    <fullName>Lead_Downgraded</fullName>
    <active>true</active>
    <label>Lead Downgraded</label>
</RecordType>