force-app/main/default/objects/Activity_log__c/recordTypes/Lead_Merge.recordType-meta.xml
<RecordType>
    <fullName>Lead_Merge</fullName>
    <active>true</active>
    <label>Lead Merge</label>
</RecordType>