force-app/main/default/objects/Activity_log__c/recordTypes/Level_Change.recordType-meta.xml
<RecordType>
    <fullName>Level_Change</fullName>
    <active>true</active>
    <label>Level Change</label>
</RecordType>