force-app/main/default/objects/Activity_log__c/recordTypes/Owner_Change.recordType-meta.xml
<RecordType>
    <fullName>Owner_Change</fullName>
    <active>true</active>
    <label>Owner Change</label>
</RecordType>