force-app/main/default/objects/Activity_log__c/recordTypes/Queue_Handoff.recordType-meta.xml
<RecordType>
    <fullName>Queue_Handoff</fullName>
    <active>true</active>
    <label>Queue Handoff</label>
</RecordType>