force-app/main/default/objects/Activity_log__c/recordTypes/View_Phone_Number.recordType-meta.xml
<RecordType>
    <fullName>View_Phone_Number</fullName>
    <active>true</active>
    <label>View Phone Number</label>
</RecordType>