force-app/main/default/objects/Activity_log__c/recordTypes/Webinar.recordType-meta.xml
<RecordType>
    <fullName>Webinar</fullName>
    <active>true</active>
    <label>Webinar</label>
</RecordType>