force-app/main/default/objects/Activity_log__c/listViews/Bengaluru_Queue_Activity_log.listView-meta.xml
<ListView>
    <fullName>Bengaluru_Queue_Activity_log</fullName>
    <filterScope>Queue</filterScope>
    <label>Bengaluru High Priority Queue</label>
    <queue>Bengaluru_High_Priority_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>