force-app/main/default/objects/Activity_log__c/listViews/Delhi_Queue_Activity_log.listView-meta.xml
<ListView>
    <fullName>Delhi_Queue_Activity_log</fullName>
    <filterScope>Queue</filterScope>
    <label>Delhi High Priorty Queue</label>
    <queue>Delhi_High_Priorty_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>