force-app/main/default/objects/Activity_log__c/listViews/High_Priority_Bangalore_Activity_log.listView-meta.xml
<ListView>
    <fullName>High_Priority_Bangalore_Activity_log</fullName>
    <filterScope>Queue</filterScope>
    <label>Experienced Priority-Bangalore</label>
    <queue>High_Priority_Bangalore</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>