force-app/main/default/objects/Activity_log__c/listViews/Public_Queue_Activity_log.listView-meta.xml
<ListView>
    <fullName>Public_Queue_Activity_log</fullName>
    <filterScope>Queue</filterScope>
    <label>Public Queue</label>
    <queue>Public_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>